@@ -96,3 +96,63 @@ class test_depth_first_search(unittest.TestCase):
             if (st[each] != None):
                 assert pre.index(each) > pre.index(st[each])
                 assert post.index(each) < post.index(st[each])
+
+
+class test_breadth_first_search(unittest.TestCase):
+
+    def setUp(self):
+        pass
+
+    def testEmptyGraph(self):
+        G = graph.graph()
+        st, lo = G.breadth_first_search()
+        assert st == {}
+        assert lo == []
+    
+    def testGraph(self):
+        G = graph.graph()
+        G.add_nodes([1, 2, 3, 4, 5])
+        G.add_edge(1, 2)
+        G.add_edge(2, 3)
+        G.add_edge(2, 4)
+        G.add_edge(4, 5)
+        G.add_edge(1, 5)
+        G.add_edge(3, 5)
+        st, lo = G.breadth_first_search(1)
+        assert st == {1: None, 2: 1, 3: 2, 4: 2, 5: 1}
+        assert lo == [1, 2, 5, 3, 4]
+    
+    def testSanityGraph(self):
+        G = graph.graph()
+        G.generate(100, 500)
+        st, lo = G.breadth_first_search()
+        for each in G:
+            if (st[each] != None):
+                assert lo.index(each) > lo.index(st[each])
+
+    def testEmptyDigraph(self):
+        G = graph.digraph()
+        st, lo = G.breadth_first_search()
+        assert st == {}
+        assert lo == []
+    
+    def testDigraph(self):
+        G = graph.digraph()
+        G.add_nodes([1, 2, 3, 4, 5])
+        G.add_edge(1, 2)
+        G.add_edge(2, 3)
+        G.add_edge(2, 4)
+        G.add_edge(4, 5)
+        G.add_edge(1, 5)
+        G.add_edge(3, 5)
+        st, lo = G.breadth_first_search()
+        assert st == {1: None, 2: 1, 3: 2, 4: 2, 5: 1}
+        assert lo == [1, 2, 5, 3, 4]
+    
+    def testSanityDigraph(self):
+        G = graph.digraph()
+        G.generate(100, 500)
+        st, lo = G.breadth_first_search()
+        for each in G:
+            if (st[each] != None):
+                assert lo.index(each) > lo.index(st[each])
